design projects page and put in cards to showcase projects with styling, change the logo to something more suitable

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gary Evans</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
   </head>
   <body>
     <section id="header">
-      <section id="'logo">
-        <img
-          src="./assets/swd-logo.png"
-          alt="a small icon of a monitor in bright purple and pink outline used as a logo"
-        />
-      </section>
+      <a href="index.html">
+        <section>
+          <img
+            src="./assets/swd-logo.png"
+            alt="a small icon of a monitor in bright purple and pink outline used as a logo"
+            id="logo"
+          />
+        </section>
+      </a>
       <section id="socials">
         <a href="https://github.com/garyismatic">
           <img src="./assets/githubIcon.png" class="social-icon" />
@@ -36,9 +39,11 @@
       <h3 id="jobTitle">Software Developer</h3>
     </section>
     <section id="nav-container">
-      <section id="projects-nav-banner" class="banner-btn">
-        <h3 class="banner-text">PROJECTS</h3>
-      </section>
+      <a href="projects.html">
+        <section id="projects-nav-banner" class="banner-btn">
+          <h3 class="banner-text">PROJECTS</h3>
+        </section>
+      </a>
       <section id="about-nav-banner" class="banner-btn">
         <h3 class="banner-text">ABOUT ME</h3>
       </section>
