create about me page, fill in about me section

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
           <h3 class="banner-text">PROJECTS</h3>
         </section>
       </a>
-      <section id="about-nav-banner" class="banner-btn">
-        <h3 class="banner-text">ABOUT ME</h3>
-      </section>
+      <a href="about.html">
+        <section id="about-nav-banner" class="banner-btn">
+          <h3 class="banner-text">ABOUT ME</h3>
+        </section>
+      </a>
     </section>
   </body>
 </html>
