added navigation to projects and about page from both of the respective pages

--- a/about.html
+++ b/about.html
@@ -57,5 +57,10 @@
       </p>
       <p>OK BYE!</p>
     </section>
+    <a href="projects.html">
+      <section id="projects-nav-banner" class="banner-btn">
+        <h3 class="banner-text">PROJECTS</h3>
+      </section>
+    </a>
   </body>
 </html>
