--- a/projects.html
+++ b/projects.html
@@ -65,5 +65,10 @@
         <section class="tech-icons"></section>
       </section>
     </section>
+    <a href="about.html">
+      <section id="about-nav-banner" class="banner-btn">
+        <h3 class="banner-text">ABOUT ME</h3>
+      </section>
+    </a>
   </body>
 </html>
