--- a/projects.html
+++ b/projects.html
@@ -21,11 +21,11 @@
         <a href="https://github.com/garyismatic">
           <img src="./assets/githubIcon.png" class="social-icon" />
         </a>
-        <a href="">
-          <img src="./assets/emailIcon.png" class="social-icon" />
-        </a>
         <a href="https://www.linkedin.com/in/gary-evans-profile">
           <img src="./assets/linkedInIcon.png" class="social-icon" />
+        </a>
+        <a href="Gary_Evans_2025.pdf" download>
+          <img src="./assets/CV.png" class="social-icon" />
         </a>
       </section>
     </section>
