chang image to a video to the project card for ace script

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         to grow and keep learning, and ideally explore areas like mobile
         development in the future.
       </p>
-      <h4>Can you help with that?.</h4>
+      <h4>Can you help with that?</h4>
       <p>
         When I’m not coding, you’ll usually find me spending time with my
         family, out on the golf course, playing board games with friends, or
