--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,9 @@
       </section>
       <section class="project-card">
         <h3 class="project-title">Ace Script</h3>
-        <img src="assets/Code-image.png" class="project-image" />
+        <video class="project-image" controls>
+          <source src="./assets/aceScript-Demo.mp4" type="video/mp4">
+        </video>
         <p class="project-description">
           AceScript is a full-stack web app developed as my bootcamp final
           project. Designed to help junior developers improve their skills, it
