starting out for v2

--- a/index.html
+++ b/index.html
@@ -11,145 +11,21 @@
     />
   </head>
   <body>
-    <section id="Landing">
-      <section id="socials">
-        <a href="https://github.com/garyismatic">
-          <img src="./assets/githubIcon.png" class="social-icon" />
-        </a>
-        <a href="https://www.linkedin.com/in/gary-evans-profile">
-          <img src="./assets/linkedInIcon.png" class="social-icon" />
-        </a>
-        <a href="Gary_Evans_2025.pdf" download>
-          <img src="./assets/CV.png" class="social-icon" />
-        </a>
-      </section>
-      <section id="profPicContainer">
-        <img
-          src="./assets/dev-prof-pic.png"
-          id="aiProfPic"
-          alt="An AI generated black and white profile picture of a man wearing a t shirt, in the style of japanese anime surrounded by black ink brush strokes in a circular motion"
-        />
-      </section>
-      <section id="title">
-        <h1 id="myName">Gary Evans</h1>
-        <h2 id="jobTitle">Software Developer</h2>
-      </section>
-    </section>
-    <img src="assets/projects-banner.png" id="project-list-header"/>
-    <section id="project-list">
-      <section class="project-card">
-        <section class="card-header">
-          <h3 class="project-title">Article Avenue</h3>
-          <a href="https://github.com/Garyismatic/NC-News">
-            <img src="assets/link-16.png" class="linkPng" />
-          </a>
-        </section>
-        <img src="assets/Code-image.png" class="project-image" />
-        <section class="techIcons">
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg"
-            class="techIcon"
-          />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
-            class="techIcon"
-          />
-        </section>
-        <section class="project-description">
-          <p>
-            Article Avenue is a front-end news app built with React, allowing
-            users to browse, filter, sort and interact with articles and
-            comments from various topics. It consumes a custom-built RESTful
-            API—also developed by me which handles content like voting,
-            commenting, and article sorting. Developed as a solo bootcamp
-            project, Article Avenue showcases front-end skills and API
-            integration fetching, creating, patching and in some cases deleting
-            data. This project was built with Test Driven Development principles
-            in mind.
-          </p>
-        </section>
-      </section>
-      <section class="project-card">
-        <section class="card-header">
-          <h3 class="project-title">Ace Script</h3>
-          <a href="https://github.com/Garyismatic/AceScript">
-            <img src="assets/link-16.png" class="linkPng" />
-          </a>
-        </section>
-        <video class="project-image" controls>
-          <source src="./assets/aceScript-Demo.mp4" type="video/mp4" />
-        </video>
-        <section class="techIcons">
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"
-            class="techIcon"
-          />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-plain-wordmark.svg"
-            class="techIcon"
-          />
-
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
-            class="techIcon"
-          />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg"
-            class="techIcon"
-          />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg"
-            class="techIcon"
-          />
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
-            class="techIcon"
-          />
-        </section>
-        <section class="project-description">
-          <p>
-            AceScript is a full-stack web app developed as my bootcamp final
-            project. Designed to help junior developers improve their skills, it
-            lets users solve coding challenges directly in the browser on a code
-            editor and get instant feedback via pre-written test cases and
-            console logs created by the user. Built with Next.js, Tailwind CSS
-            and MongoDB, it features user authentication, challenge filtering,
-            and a user profile to track progress. This was a group project over
-            several weeks from inception to completion and showcases my ability
-            to work and deliver on something as part of a team
-          </p>
-        </section>
-      </section>
-    </section>
+    <h2>Software Developer</h2>
+    <h1>Gary Evans </h1>
+    <p>I'm Gary, a career switcher based in Essex, working towards a
+    long-term future in software development. After completing a full-time
+    JavaScript bootcamp with Northcoders, I went on to mentor new students at
+    the same bootcamp, helping them build full-stack projects while
+    strengthening my own skills. I’ve built applications using JavaScript,
+    React, Node.js, PostgreSQL, and TypeScript, and I enjoy solving problems by
+    reading documentation and getting hands-on with code. I’m also exploring
+    Python and learning more about how data and systems work behind the scenes.
+    Before tech, I spent years in customer-facing and leadership roles. That
+    experience taught me how to communicate well, stay calm under pressure, and
+    work with people from all backgrounds, skills I carry into every project I
+    work on now. Right now, I’m looking for my first junior developer role in a
+    team that’s collaborative and supportive, where I can keep learning and
+    start making a real contribution.</p>
   </body>
 </html>
