adding links to email me and download my cv

--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
           <h2>Software Developer</h2>
           <h1>Gary Evans</h1>
           <p>
-            Hi, I'm a junior developer based in Essex with a background in customer-focused roles and team leadership. I’ve since trained and completed an intensive JavaScript bootcamp where after completion I went on to mentor new learners going through the same bootcamp. I enjoy building full-stack apps using JavaScript, React, Node, and PostgreSQL, and like figuring things out through hands on problem solving. I'm looking for opportunities where I can keep learning, grow my skills, and contribute to real world solutions.
+            Hi, I'm a junior developer based in Essex with a background in
+            customer-focused roles and team leadership. I’ve since trained and
+            completed an intensive JavaScript bootcamp where after completion I
+            went on to mentor new learners going through the same bootcamp. I
+            enjoy building full-stack apps using JavaScript, React, Node, and
+            PostgreSQL, and like figuring things out through hands on problem
+            solving. I'm looking for opportunities where I can keep learning,
+            grow my skills, and contribute to real world solutions.
           </p>
           <ul class="icons">
             <li>
-              <a href="www.linkedin.com/in/gary-evans-profile" target="_blank">
+              <a
+                href="www.linkedin.com/in/gary-evans-profile"
+                target="_blank"
+                class="social-link"
+              >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                   <title>linkedin</title>
                   <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -29,7 +40,11 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/Garyismatic" target="_blank">
+              <a
+                href="https://github.com/Garyismatic"
+                target="_blank"
+                class="social-link"
+              >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
                   <title>github</title>
                   <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -41,14 +56,31 @@
               </a>
             </li>
             <li>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <title>email</title>
-                <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                <path
-                  d="M64 112c-8.8 0-16 7.2-16 16l0 22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1l0-22.1c0-8.8-7.2-16-16-16L64 112zM48 212.2L48 384c0 8.8 7.2 16 16 16l384 0c8.8 0 16-7.2 16-16l0-171.8L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64l384 0c35.3 0 64 28.7 64 64l0 256c0 35.3-28.7 64-64 64L64 448c-35.3 0-64-28.7-64-64L0 128z"
-                  class="social"
-                />
-              </svg>
+              <a href="Gary_Evans_2025.pdf" download class="social-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <title>CV</title>
+                  <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                  <path
+                    d="M64 464l48 0 0 48-48 0c-35.3 0-64-28.7-64-64L0 64C0 28.7 28.7 0 64 0L229.5 0c17 0 33.3 6.7 45.3 18.7l90.5 90.5c12 12 18.7 28.3 18.7 45.3L384 304l-48 0 0-144-80 0c-17.7 0-32-14.3-32-32l0-80L64 48c-8.8 0-16 7.2-16 16l0 384c0 8.8 7.2 16 16 16zM176 352l32 0c30.9 0 56 25.1 56 56s-25.1 56-56 56l-16 0 0 32c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-48 0-80c0-8.8 7.2-16 16-16zm32 80c13.3 0 24-10.7 24-24s-10.7-24-24-24l-16 0 0 48 16 0zm96-80l32 0c26.5 0 48 21.5 48 48l0 64c0 26.5-21.5 48-48 48l-32 0c-8.8 0-16-7.2-16-16l0-128c0-8.8 7.2-16 16-16zm32 128c8.8 0 16-7.2 16-16l0-64c0-8.8-7.2-16-16-16l-16 0 0 96 16 0zm80-112c0-8.8 7.2-16 16-16l48 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 32 32 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 48c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-64 0-64z"
+                    class="social"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="mailto:garyevans1501@gmail.com?subject=Hello%20I%20saw%20Your%20Portfolio%20Page"
+                class="social-link"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <title>email</title>
+                  <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                  <path
+                    d="M64 112c-8.8 0-16 7.2-16 16l0 22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1l0-22.1c0-8.8-7.2-16-16-16L64 112zM48 212.2L48 384c0 8.8 7.2 16 16 16l384 0c8.8 0 16-7.2 16-16l0-171.8L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64l384 0c35.3 0 64 28.7 64 64l0 256c0 35.3-28.7 64-64 64L64 448c-35.3 0-64-28.7-64-64L0 128z"
+                    class="social"
+                  />
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
