edited my about text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <h1>Gary Evans</h1>
           <p>
             Hi, I'm a junior developer based in Essex with a background in
-            customer-focused roles and team leadership. I’ve since trained and
-            completed an intensive JavaScript bootcamp where after completion I
-            went on to mentor new learners going through the same bootcamp. I
-            enjoy building full-stack apps using JavaScript, React, Node, and
+            customer-focused roles and team leadership. I’ve since
+            completed an intensive JavaScript bootcamp where I gained a solid foundation to build on pursuing my career in the space, after completion of the bootcamp I
+            spent some time mentoring new students going through the same process. I
+            enjoy building full-stack applications using JavaScript, React, Node, and
             PostgreSQL, and like figuring things out through hands on problem
             solving. I'm looking for opportunities where I can keep learning,
             grow my skills, and contribute to real world solutions.
