add the files for project screenshots and a usable profile picture with the css styling adjusted to suit

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
           <h1>Gary Evans</h1>
           <p>
             Hi, I'm a junior developer based in Essex with a background in
-            customer-focused roles and team leadership. I’ve since
-            completed an intensive JavaScript bootcamp where I gained a solid foundation to build on pursuing my career in the space, after completion of the bootcamp I
-            spent some time mentoring new students going through the same process. I
-            enjoy building full-stack applications using JavaScript, React, Node, and
-            PostgreSQL, and like figuring things out through hands on problem
-            solving. I'm looking for opportunities where I can keep learning,
-            grow my skills, and contribute to real world solutions.
+            customer service and team leadership.
+          </p>
+          <p>
+            I have experience creating full-stack applications using JavaScript,
+            React, Node, and PostgreSQL, and I thrive on solving problems
+            through hands-on coding. <br />
+          </p>
+          <p>
+            After completing an intensive JavaScript bootcamp, I built a solid
+            foundation in full-stack development and went on to mentor new
+            students through the same journey. <br />I'm now looking for
+            opportunities where I can continue learning, grow my skills, and
+            contribute to building real-world solutions.
           </p>
           <ul class="icons">
             <li>
@@ -85,7 +91,7 @@
           </ul>
         </div>
         <img
-          src="./assets/placeholder-img.png"
+          src="./assets/me.jpg"
           alt="A picture of my (Gary Evans) face looking down into the camera smiling"
           id="profile-pic"
         />
