fix linkedin link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="icons">
             <li>
               <a
-                href="www.linkedin.com/in/gary-evans-profile"
+                href="https://linkedin.com/in/gary-evans-profile"
                 target="_blank"
                 class="social-link"
               >
