--- a/index.html
+++ b/index.html
@@ -96,6 +96,37 @@
           id="profile-pic"
         />
       </article>
+      <main class="project-section">
+        <h2>Projects</h2>
+        <section class="project-card">
+          <img
+            src="./assets/ace-script-screenshot.png"
+            class="project-img"
+            alt="ace script home page"
+          />
+          <section class="project-text">
+            <h3 class="project-title">AceScript</h3>
+            <p class="project-description">
+              AceScript was built by me and my team as the final project of our
+              software development bootcamp. Our goal was to explore new
+              frameworks and libraries, exposing ourselves to a variety of
+              technologies and improving our ability to look up documentation
+              independently.<br />
+              The core functionality of AceScript allows users to solve coding
+              challenges at varying levels of difficulty. What you're seeing
+              here is our Minimum Viable Product (MVP). On the landing page,
+              you'll find a "Coming Soon" section that outlines potential ideas
+              for expanding and further developing the project, given more time.
+            </p>
+            <ul class="icons">
+              <li>Next.JS</li>
+              <li>MongoDB</li>
+              <li>Typescript</li>
+              <li>Tailwind.CSS</li>
+            </ul>
+          </section>
+        </section>
+      </main>
       <footer class="footer-section">
         <h2 class="footer-title">Other Projects</h2>
         <div class="footer-text">
