edit the about me text

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             through hands-on coding. <br />
           </p>
           <p>
-            After completing an intensive JavaScript bootcamp, I built a solid
-            foundation in full-stack development and went on to mentor new
-            students through the same journey. <br />I'm now looking for
-            opportunities where I can continue learning, grow my skills, and
-            contribute to building real-world solutions.
+            After completing the Northcoders JavaScript bootcamp, I gained a solid foundation for full-stack development and was offered a
+            temorary position to mentor new students going through the same
+            journey with them. <br />I'm now looking for new opportunities where I can
+            continue my own learning, grow my skills, and contribute to building
+            real-world solutions.
           </p>
           <ul class="icons">
             <li>
