add placeholders for other projects with basic styling outline

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             through hands-on coding. <br />
           </p>
           <p>
-            After completing the Northcoders JavaScript bootcamp, I gained a solid foundation for full-stack development and was offered a
+            After completing the Northcoders JavaScript bootcamp, I gained a
+            solid foundation for full-stack development and was offered a
             temorary position to mentor new students going through the same
-            journey with them. <br />I'm now looking for new opportunities where I can
-            continue my own learning, grow my skills, and contribute to building
-            real-world solutions.
+            journey with them. <br />I'm now looking for new opportunities where
+            I can continue my own learning, grow my skills, and contribute to
+            building real-world solutions.
           </p>
           <ul class="icons">
             <li>
@@ -97,35 +98,95 @@
         />
       </article>
       <main class="project-section">
-        <h2>Projects</h2>
-        <section class="project-card">
-          <img
-            src="./assets/ace-script-screenshot.png"
-            class="project-img"
-            alt="ace script home page"
-          />
-          <section class="project-text">
-            <h3 class="project-title">AceScript</h3>
-            <p class="project-description">
-              AceScript was built by me and my team as the final project of our
-              software development bootcamp. Our goal was to explore new
-              frameworks and libraries, exposing ourselves to a variety of
-              technologies and improving our ability to look up documentation
-              independently.<br />
-              The core functionality of AceScript allows users to solve coding
-              challenges at varying levels of difficulty. What you're seeing
-              here is our Minimum Viable Product (MVP). On the landing page,
-              you'll find a "Coming Soon" section that outlines potential ideas
-              for expanding and further developing the project, given more time.
-            </p>
-            <ul class="icons">
-              <li>Next.JS</li>
-              <li>MongoDB</li>
-              <li>Typescript</li>
-              <li>Tailwind.CSS</li>
-            </ul>
+        <h2 class="projects-header">Projects</h2>
+        <article class="projects">
+          <section class="project-card">
+            <section class="project-text">
+              <h3 class="project-title">AceScript</h3>
+              <p class="project-description">
+                AceScript was built by me and my team as the final project of
+                our software development bootcamp. Our goal was to explore new
+                frameworks and libraries, exposing ourselves to a variety of
+                technologies and improving our ability to look up documentation
+                independently.<br />
+                The core functionality of AceScript allows users to solve coding
+                challenges at varying levels of difficulty. What you're seeing
+                here is our Minimum Viable Product (MVP). On the landing page,
+                you'll find a "Coming Soon" section that outlines potential
+                ideas for expanding and further developing the project, given
+                more time.
+              </p>
+              <ul>
+                <li>Next.JS</li>
+                <li>MongoDB</li>
+                <li>Typescript</li>
+                <li>Tailwind.CSS</li>
+              </ul>
+            </section>
+            <img
+              src="./assets/ace-script-screenshot.png"
+              class="project-img"
+              alt="ace script home page"
+            />
           </section>
-        </section>
+          <section class="project-card">
+            <section class="project-text">
+              <h3 class="project-title">Article Avenue Frontend</h3>
+              <p class="project-description">
+                desc here
+              </p>
+              <ul>
+                <li>tech</li>
+                <li>tech</li>
+                <li>tech</li>
+                <li>tech</li>
+              </ul>
+            </section>
+            <img
+              src="./assets/article-avenue-react-screenshot.png"
+              class="project-img"
+              alt="ace script home page"
+            />
+          </section>
+          <section class="project-card">
+            <section class="project-text">
+              <h3 class="project-title">Article Avenue - API</h3>
+              <p class="project-description">
+                desc here
+              </p>
+              <ul>
+                <li>tech</li>
+                <li>Mech</li>
+                <li>Tech</li>
+                <li>Tech</li>
+              </ul>
+            </section>
+            <img
+              src="./assets/article-avenue-API-screenshot.png"
+              class="project-img"
+              alt="ace script home page"
+            />
+          </section>
+          <section class="project-card">
+            <section class="project-text">
+              <h3 class="project-title">OutNabout</h3>
+              <p class="project-description">
+               desc
+              </p>
+              <ul>
+                <li>tech</li>
+                <li>tech/li>
+                <li>Tech</li>
+                <li>Tech</li>
+              </ul>
+            </section>
+            <img
+              src="./assets/out-n-about-screenshot.png"
+              class="project-img"
+              alt="ace script home page"
+            />
+          </section>
+        </article>
       </main>
       <footer class="footer-section">
         <h2 class="footer-title">Other Projects</h2>
