--- a/index.html
+++ b/index.html
@@ -104,17 +104,12 @@
             <section class="project-text">
               <h3 class="project-title">AceScript</h3>
               <p class="project-description">
-                AceScript was built by me and my team as the final project of
-                our software development bootcamp. Our goal was to explore new
-                frameworks and libraries, exposing ourselves to a variety of
-                technologies and improving our ability to look up documentation
-                independently.<br />
-                The core functionality of AceScript allows users to solve coding
-                challenges at varying levels of difficulty. What you're seeing
-                here is our Minimum Viable Product (MVP). On the landing page,
-                you'll find a "Coming Soon" section that outlines potential
-                ideas for expanding and further developing the project, given
-                more time.
+                AceScript is a group project built at the end of my bootcamp.
+                It’s a full-stack app where users can attempt coding challenges
+                by difficulty level. I worked across the stack and used the
+                opportunity to explore new technologies, strengthen my
+                collaboration skills, and ship a functional MVP under tight time
+                constraints.
               </p>
               <ul>
                 <li>Next.JS</li>
@@ -131,15 +126,45 @@
           </section>
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">Article Avenue Frontend</h3>
+              <h3 class="project-title">Article Avenue - API</h3>
               <p class="project-description">
-                desc here
+                A custom builtlight-border RESTful API built with Express and
+                JavaScript, using PostgreSQL as the relational database. It
+                powers a reddit style news site where users can read or
+                articles, post comments, and vote on content. I built full CRUD
+                functionality across topics, articles, comments, and users
+                including query support for sorting, filtering, and pagination.
+                The API includes comprehensive endpoint documentation and was
+                designed to replicate a real world backend service.
               </p>
               <ul>
-                <li>tech</li>
-                <li>tech</li>
-                <li>tech</li>
-                <li>tech</li>
+                <li>JavaScript</li>
+                <li>PostgreSQL</li>
+                <li>Express</li>
+                <li>Jest</li>
+                <li>RESTful</li>
+              </ul>
+            </section>
+            <img
+              src="./assets/article-avenue-API-screenshot.png"
+              class="project-img light-border"
+              alt="ace script home page"
+            />
+          </section>
+          <section class="project-card">
+            <section class="project-text">
+              <h3 class="project-title">Article Avenue Frontend</h3>
+              <p class="project-description">
+                Article Avenue A Reddit style news app built with React,
+                connecting to my backend project Article Avenue API listed
+                above. Users can browse articles by topic, view and post
+                comments, and vote on content. This app was built to explore API
+                integration, routing, and state management in React.
+              </p>
+              <ul>
+                <li>React</li>
+                <li>Axios</li>
+                <li>CSS</li>
               </ul>
             </section>
             <img
@@ -150,34 +175,19 @@
           </section>
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">Article Avenue - API</h3>
-              <p class="project-description">
-                desc here
-              </p>
-              <ul>
-                <li>tech</li>
-                <li>Mech</li>
-                <li>Tech</li>
-                <li>Tech</li>
-              </ul>
-            </section>
-            <img
-              src="./assets/article-avenue-API-screenshot.png"
-              class="project-img"
-              alt="ace script home page"
-            />
-          </section>
-          <section class="project-card">
-            <section class="project-text">
               <h3 class="project-title">OutNabout</h3>
               <p class="project-description">
-               desc
+                A location-based day trip planner built with vanilla JavaScript,
+                HTML and CSS. Users can search any city to view live weather,
+                travel time from their location, and nearby places like food
+                spots, parks, museums and more. Powered by Open-Meteo,
+                OpenRouteService, and OpenStreetMap APIs
               </p>
               <ul>
-                <li>tech</li>
-                <li>tech/li>
-                <li>Tech</li>
-                <li>Tech</li>
+                <li>JavaScript</li>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>Public API</li>
               </ul>
             </section>
             <img
