fix typo in project desc

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
             <section class="project-text">
               <h3 class="project-title">Article Avenue - API</h3>
               <p class="project-description">
-                A custom builtlight-border RESTful API built with Express and
-                JavaScript, using PostgreSQL as the relational database. It
-                powers a reddit style news site where users can read or
-                articles, post comments, and vote on content. I built full CRUD
-                functionality across topics, articles, comments, and users
-                including query support for sorting, filtering, and pagination.
-                The API includes comprehensive endpoint documentation and was
-                designed to replicate a real world backend service.
+                A custom built RESTful API built with Express and JavaScript,
+                using PostgreSQL as the relational database. It powers a reddit
+                style news site where users can read or articles, post comments,
+                and vote on content. I built full CRUD functionality across
+                topics, articles, comments, and users including query support
+                for sorting, filtering, and pagination. The API includes
+                comprehensive endpoint documentation and was designed to
+                replicate a real world backend service.
               </p>
               <ul>
                 <li>JavaScript</li>
