alter project card img alt text to be specific to each img

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <img
               src="./assets/article-avenue-API-screenshot.png"
               class="project-img light-border"
-              alt="ace script home page"
+              alt="article avenue api code editor screenshot"
             />
           </section>
           <section class="project-card">
@@ -170,7 +170,7 @@
             <img
               src="./assets/article-avenue-react-screenshot.png"
               class="project-img"
-              alt="ace script home page"
+              alt="article avenue home page frontend"
             />
           </section>
           <section class="project-card">
@@ -193,7 +193,7 @@
             <img
               src="./assets/out-n-about-screenshot.png"
               class="project-img"
-              alt="ace script home page"
+              alt="out n about results page screenshot"
             />
           </section>
         </article>
