edit footer section remove placeholders and add relevent info

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
               <ul>
                 <li>React</li>
                 <li>Axios</li>
-                <li>CSS</li>
+                <li>Design</li>
+                <li>Planning</li>
               </ul>
             </section>
             <img
@@ -202,50 +203,46 @@
         <h2 class="footer-title">Other Projects</h2>
         <div class="footer-text">
           <div class="footer-text-box">
-            <h3>Blogging:</h3>
+            <h3>Communities:</h3>
             <ul>
               <li>
-                <a href="https://learntoteach.tech/" target="_blank"
-                  >learntoteach.tech</a
+                <a href="https://codewars.com" target="_blank">Codewars</a>
+              </li>
+              <li>
+                <a href="https://https://www.freecodecamp.org/" target="_blank"
+                  >FreeCodeCamp</a
                 >
               </li>
               <li>
-                <a href="https://github.com/microdotblog" target="_blank"
-                  >Microblog open source contributions</a
-                >
+                <a href="https://codenewbie.org" target="_blank">CodeNewbie</a>
               </li>
             </ul>
           </div>
           <div class="footer-text-box">
-            <h3>Open Source:</h3>
+            <h3>Hobbies:</h3>
             <ul>
-              <li>This-social / that-website</li>
-              <li>that / angular-website</li>
-              <li>Them / docs</li>
+              <li>Board Games - Quacks of Quedlinburg</li>
+              <li>Golf - HCP 24</li>
+              <li>Poker - Texas Hold'Em</li>
+              <li>Personal Coding Projects</li>
             </ul>
           </div>
           <div class="footer-text-box">
-            <h3>Other Courses:</h3>
+            <h3>My Learning Resources:</h3>
             <ul>
               <li>
-                <a
-                  href="https://frontendmasters.com/teachers/jen-kramer/"
-                  target="_blank"
-                  >My Frontend Masters courses</a
+                <a href="https://codeacademy.com" target="_blank"
+                  >Codeacademy</a
                 >
               </li>
               <li>
-                <a
-                  href="https://frontendmasters.com/courses/portfolio-website/"
-                  target="_blank"
-                  >Personal Portfolio Website course</a
+                <a href="https://https://www.northcoders.com/" target="_blank"
+                  >Northcoders</a
                 >
               </li>
               <li>
-                <a
-                  href="https://frontendmasters.com/courses/intermediate-html-css/"
-                  target="_blank"
-                  >Intermediate HTML &amp; CSS course</a
+                <a href="https://frontendmasters.com/" target="_blank"
+                  >Frontend Masters</a
                 >
               </li>
             </ul>
