--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             After completing the Northcoders JavaScript bootcamp, I gained a
             solid foundation for full-stack development and was offered a
             temorary position to mentor new students going through the same
-            journey with them. <br />I'm now looking for new opportunities where
+            journey I did. <br />I'm now looking for new opportunities where
             I can continue my own learning, grow my skills, and contribute to
             building real-world solutions.
           </p>
