edit footer title to "more about me"

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </article>
       </main>
       <footer class="footer-section">
-        <h2 class="footer-title">Other Projects</h2>
+        <h2 class="footer-title">More About Me</h2>
         <div class="footer-text">
           <div class="footer-text-box">
             <h3>Communities:</h3>
