--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <p class="project-description">
                 A custom built RESTful API built with Express and JavaScript,
                 using PostgreSQL as the relational database. It powers a reddit
-                style news site where users can read or articles, post comments,
+                style news site where users can read articles, post comments,
                 and vote on content. I built full CRUD functionality across
                 topics, articles, comments, and users including query support
                 for sorting, filtering, and pagination. The API includes
