Change project titles to be brief descriptions of what the project is

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
         <article class="projects">
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">AceScript</h3>
+              <h3 class="project-title">
+                Using Next.JS to create a coding challenge web application with
+                User login and progress.
+              </h3>
               <p class="project-description">
                 AceScript is a group project built at the end of my bootcamp.
                 It’s a full-stack app where users can attempt coding challenges
@@ -126,14 +129,16 @@
           </section>
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">Article Avenue - API</h3>
-              <p class="project-description">
+              <h3 class="project-title">
                 A custom built RESTful API built with Express and JavaScript,
-                using PostgreSQL as the relational database. It powers a reddit
-                style news site where users can read articles, post comments,
-                and vote on content. I built full CRUD functionality across
-                topics, articles, comments, and users including query support
-                for sorting, filtering, and pagination. The API includes
+                using PostgreSQL as the relational database.
+              </h3>
+              <p class="project-description">
+                Article Avenues backend API powers a reddit style news site
+                where users can read articles, post comments, and vote on
+                content. I built full CRUD functionality across topics,
+                articles, comments, and users including query support for
+                sorting, filtering, and pagination. The API includes
                 comprehensive endpoint documentation and was designed to
                 replicate a real world backend service.
               </p>
@@ -153,13 +158,15 @@
           </section>
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">Article Avenue Frontend</h3>
+              <h3 class="project-title">
+                A Reddit style news app built with React
+              </h3>
               <p class="project-description">
-                Article Avenue A Reddit style news app built with React,
-                connecting to my backend project Article Avenue API listed
-                above. Users can browse articles by topic, view and post
-                comments, and vote on content. This app was built to explore API
-                integration, routing, and state management in React.
+                Article Avenues frontend connecting to my backend project
+                Article Avenue API listed above. Users can browse articles by
+                topic, view and post comments, and vote on content. This app was
+                built to explore API integration, routing, and state management
+                in React.
               </p>
               <ul>
                 <li>React</li>
@@ -176,10 +183,12 @@
           </section>
           <section class="project-card">
             <section class="project-text">
-              <h3 class="project-title">OutNabout</h3>
+              <h3 class="project-title">
+                A location-based day trip planner built with vanilla JavaScript.
+                HTML and CSS.
+              </h3>
               <p class="project-description">
-                A location-based day trip planner built with vanilla JavaScript,
-                HTML and CSS. Users can search any city to view live weather,
+                With outNabout Users can search any city to view live weather,
                 travel time from their location, and nearby places like food
                 spots, parks, museums and more. Powered by Open-Meteo,
                 OpenRouteService, and OpenStreetMap APIs
