add into api description about the test driven development

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
           <section class="project-card">
             <section class="project-text">
               <h3 class="project-title">
-                A custom built RESTful API built with Express and JavaScript,
-                using PostgreSQL as the relational database.
+                A RESTful API built using test driven development making use of
+                Jest, Express and JavaScript, also using PostgreSQL as the
+                relational database.
               </h3>
               <p class="project-description">
                 Article Avenues backend API powers a reddit style news site
